casey: fixes portfolio overflow

--- a/wp-content/themes/Divi-Kasil/src/scss/partials/_portfolio.scss
+++ b/wp-content/themes/Divi-Kasil/src/scss/partials/_portfolio.scss
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
     
     @media(min-width: $screen-xs-min) {
         flex-direction: row;
