--- a/wp-content/themes/Divi-Kasil/src/scss/partials/_vars.scss
+++ b/wp-content/themes/Divi-Kasil/src/scss/partials/_vars.scss
@@ -27,3 +27,19 @@ hr {
 #main-content .container::before {
     display: none;
 }
+//puts text above the image on mobile
+//class goes on row
+.textFirstMobile {
+    @media (max-width: $screen-xs-max) {
+    display: flex;
+    flex-direction: column;
+    
+        .et_pb_column_1_2 {
+            order: 1;
+            
+            &:nth-of-type(2) {
+                order: 0;
+            }
+        }
+    }
+}
